# kubernetes-unused-reporter

./: .gitignore  README.md  main.py  pyproject.toml
src/: k8s.py
