[project]
name = "kubernetes-unused-reporter"
version = "0.1.0"
description = "A tool to report unused Kubernetes secrets in all namespaces."
authors = [{ name = "Wassim Kallel", email = "wassim.kallel@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["kubernetes==32.0.1", "termcolor==3.1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
